--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">RecipeRun</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="admob_app_id">ca-app-pub-7513365978256311~2699170129</string>
+
+
+    <!--    Test Ad Id-->
+    <string name="banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
+
+    <!--    Real Ad Id-->
+    <!--    <string name="banner_ad_id">ca-app-pub-7513365978256311/8483520860</string>-->
+
 
 </resources>
